# noise-ai-ble-smartwatch

./: .gitignore  App.tsx  ContextMemoryTester.ts  ContextualAI.ts  DUPLICATE_SEND_BUTTON_FIX.md  DailyAssistant.ts  DailyAssistantDashboard.tsx  DataGenerationComponent.tsx  DatabaseService.ts  DeviceController.ts  EnhancedHealthDataManager.ts  EnhancedIntentClassifier.ts  EnhancedIntentTester.ts  GET_LIBOPUS.md  HealthDashboard.tsx  HealthDataGenerator.tsx  HealthDataGeneratorSection.tsx  HealthDataManager.ts  IMPLEMENTATION_SUMMARY.md  IntentClassifier.ts  IntentClassifierTester.ts  KEYBOARD_CONFLICT_RESOLUTION.md  KEYBOARD_FIXES.md  KEYBOARD_VISIBILITY_FIX.md  LAYOUT_AI_FIXES.md  LlamaService.ts  ModelManager.tsx  OPUS_BRIDGE_SETUP.md  QueryRouter.ts  README.md  REFACTORING_STATUS.md  RENDER_ERROR_FIX.md  ResponseGenerator.ts  SEND_BUTTON_FIX.md  StorageManager.ts  VoiceTest.original.tsx  VoiceTest.tsx  VoiceTestRefactored.tsx  app.json  clearMemory.js  (+17 more)
ZH_SDK_Android_20250801_V2.1.7 2/SDKUpdateLog/: SDKUpdateLog-en.txt  SDKUpdateLog-zh.txt
ZH_SDK_Android_20250808_V2.2.0/SDKUpdateLog/: SDKUpdateLog-en.txt  SDKUpdateLog-zh.txt
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  CMakeLists_simple.txt  opus_bridge_jni.cpp  simple_native.c  wav_writer.c  wav_writer.h
docs/: SUPPORTING_FILES_ANALYSIS.md  demo-script.md
docs/features/: ai-model.md  context-memory.md  device-control-navigation.md  health-data.md  persistent-connection.md  (+1 more)
ios/: Podfile
(+405 files in other folders)
